# emanate

./: .appveyor.yml  .cirrus.yml  .gitignore  .pylintrc  .pyup.yml  .readthedocs.yaml  .spelling  .travis.yml  CONTRIBUTORS.md  CREDITS.md  Makefile  README.md  SECURITY.md  bors.toml  build-docs.sh  lint-requirements.txt  lint.sh  netlify.toml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: BORK_RELEASE_TEMPLATE.md
docs/source/: conf.py  config.rst  index.rst  navbar.rst
emanate/: __init__.py  cli.py  config.py  version.py
tests/: test_config.py  test_integration.py  test_version.py  utils.py
