[build-system]
# Specify the required build system.
# Setuptools 40.9.0+ requirement is necessary to get rid of setup.py; see
#  https://github.com/pypa/setuptools/pull/1675
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bork.zipapp]
enabled = true
main = "emanate.cli:main"

[tool.bork.aliases]
# Runs *only* pylint. (Not the actual tests.)
lint = "python -m pytest -k 'pylint' --pylint --verbose"
# Runs tests
test = "python -m pytest --verbose"
docs = "env PYTHONPATH=./ pdoc3 --html --output-dir ./html --force emanate"
