[build-system]
# Specify the required build system.
requires = ["setuptools >= 61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emanate"
dynamic = ["version"]
authors = [
    {name = "Ellen Marie Dash", email = "me@duckie.co"},
]
description = "Symlink files from one directory to another, similary to Effuse and Stow."
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = []

requires-python = ">= 3.8"

[project.urls]
repository = "https://github.com/duckinator/emanate"
documentation = "https://emanate-docs.netlify.app/cli.html"

[project.optional-dependencies]
bork = [
    "bork~=7.0.0",
]

test = [
    "emanate[bork]",
    "pytest~=7.4",
    "pylint~=3.0",
    "pytest-pylint~=0.21.0",
    "mypy~=1.6.1",
    "pytest-mypy~=0.10.3",
]

docs = [
    "pdoc3",
]

[project.scripts]
emanate = "emanate.cli:main"

[tool.setuptools]
packages = ["emanate"]

[tool.setuptools.dynamic]
version = {attr = "emanate.__version__"}

[tool.bork.zipapp]
enabled = true
main = "emanate.cli:main"

[tool.bork.aliases]
# Runs *only* pylint. (Not the actual tests.)
lint = "python -m pytest -k 'pylint or mypy' --pylint --mypy --verbose"
# Runs tests
test = "python -m pytest --verbose"
docs = "env PYTHONPATH=./ pdoc3 --html --output-dir ./html --force emanate"
