[metadata]
name = emanate
version = attr: emanate.__version__
author = attr: emanate.__author__
author_email = me@duckie.co
description = Symlink files from one directory to another, similary to Effuse and Stow.
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/duckinator/emanate
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
python_requires = >=3.5

[options.extras_require]
# FIXME: This name seems wrong, but I can't think of a better one atm.
build =
    bork==5.1.0
    pip==20.3.3
    setuptools==50.3.2
    wheel==0.36.2

# testing and linting are split, to avoid CI problems
# with Python 3.6 and 3.8 on FreeBSD.

testing_only =
    bork==5.1.0
    pytest==6.1.2

testing =
    bork==5.1.0
    pytest==6.1.2
    pylint==2.6.0
    pytest-pylint==0.18.0

docs =
    bork==5.1.0
    pdoc3

[options.entry_points]
console_scripts =
    emanate = emanate.cli:main

[bdist]
bdist-base = build/bdist

[clean]
build-base = build
build-lib  = build/lib
bdist-base = build/bdist
all = True

[bork]
zipapp_main = emanate.cli:main
