[metadata]
name = emanate
# Emanate follows the Semantic Versioning convention; see https://semver.org/
version = file: version
author = Ellen Marie Dash
author_email = me@duckie.co
description = Symlink files from one directory to another, similary to Effuse and Stow.
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/duckinator/emanate
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:

python_requires = >=3.8
install_requires =


[options.extras_require]
# FIXME: This name seems wrong, but I can't think of a better one atm.
build =
    bork~=5.1
    pip~=21.0
    setuptools~=67.4
    wheel~=0.38.4

# testing and linting are split, to avoid CI problems
# with Python 3.6 and 3.8 on FreeBSD.

testing_only =
    bork~=5.1
    pytest~=6.2

testing =
    bork~=5.1
    pytest~=6.2
    pylint~=2.7
    pytest-pylint~=0.18.0
    mypy~=0.812
    pytest-mypy~=0.8.1

docs =
    pdoc3

[options.entry_points]
console_scripts =
    emanate = emanate.cli:main

[bdist]
bdist-base = build/bdist

[clean]
build-base = build
build-lib  = build/lib
bdist-base = build/bdist
all = True

[bork]
zipapp_main = emanate.cli:main
